@@ -11,6 +11,8 @@ glibc (2.3.6-10) UNRELEASED; urgency=low
   * Set the minimum kernel to 2.6.1 for the udeb package, except for i386,
     m68k, mips, mipsel, powerpc and s390.
   * Enable the locales-all package.  (Closes: #308020)
+  * debian/sysdeps/i386.mk: Build back the glibc with --without-__thread on
+    i386 (Closes: #368022, #368326).
 
  -- Aurelien Jarno <aurel32@debian.org>  Fri, 19 May 2006 05:49:18 +0000
 
